added some js logic

--- a/index.html
+++ b/index.html
@@ -5,73 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Page</title>
-  <link rel="stylesheet" href="../src/css/style.css">
+  <link rel="stylesheet" href="72038951a562ea7dd9fb.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Potta+One&amp;family=Yusei+Magic&amp;display=swap"
     rel="stylesheet">
-</head>
+<script defer src="main.js"></script></head>
 
 <body>
-  <header>
-    <nav>
-      <div id="cover" class="home-tab">
-        <img id="dripping" src="../src/img/dripping.png" alt="img">
-      </div>
-      <ul id="tab-list">
-        <li>Home</li>
-        <li>Menu</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div id="content">
-      <div id="main-heading">
-        <img class="decorations" id="bee-left" src="../src/img/bee.svg" alt="bee">
-        <img class="decorations" id="bee-right" src="../src/img/bee.svg" alt="bee">
-        <div id="heading-text">
-          <h1>Beary's Breakfast Bar</h1>
-        </div>
-      </div>
-      <div class="crop-out" id="review-card">
-        <div class="crop-in">
-          <p id="review">Beary's has the best porridge! The atmosphere and customer service make you feel like you are
-            sitting in
-            the
-            middle of
-            the woods, eating like a bear! This is exactly the kind of place that I like to return to again and again.
-          </p>
-          <p id="customer">Mohammad Marmash</p>
-        </div>
-      </div>
-      <div class="crop-out hours">
-        <div class="crop-in hours">
-          <h3>Hours</h3>
-          <p id="sunday">Sunday: 8am - 8pm</p>
-          <p id="monday">Monday: 6am - 6pm</p>
-          <p id="tuesday">Tuesday: 6am - 6pm</p>
-          <p id="wednesday">Wednesday: 6am - 6pm</p>
-          <p id="thursday">Thursday: 6am - 10pm</p>
-          <p id="friday">Friday: 6am - 10pm</p>
-          <p id="saturday">Saturday: 8am - 10pm</p>
-        </div>
-      </div>
-      <div class="crop-out location">
-        <div class="crop-in location">
-          <h3>Location</h3>
-          <p>123 Forest Drive, Forestville, Maine</p>
-        </div>
-      </div>
-      <img class="decorations" id="hive" src="../src/img/honeycomb.svg" alt="hive">
-    </div>
-  </main>
-  <footer>
-    <a href="http://www.freepik.com">Hive icon made by Freepik - www.flaticon.com</a>
-    <a href="http://www.freepik.com">Bee icons made by Smashicons - www.flaticon.com</a>
-    <a href="http://www.freepik.com">Background image created by dgim-studio - www.freepik.com</a>
-    <p>design by Ben Eck</p>
-  </footer>
-
 </body>
 
 </html>
