--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Page</title>
-  <link rel="stylesheet" href="72038951a562ea7dd9fb.css">
+  <link rel="stylesheet" href="../src/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Potta+One&amp;family=Yusei+Magic&amp;display=swap"
     rel="stylesheet">
-<script defer src="main.js"></script></head>
+</head>
 
 <body>
 </body>
